--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     hello world
-   <!-- <script src="./script.js"></script>  -->
-   <script src="./temp.js"></script>
+   <!-- <script src="./start.js"></script>  -->
+   <script src="./object.js"></script>
 </body>
 </html>
