--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     hello world
-   <!-- <script src="./start.js"></script>  -->
-   <script src="./object.js"></script>
-</body>
+    <!-- <script src="./start.js"></script>  -->
+    <!-- <script src="./object1.js"></script> -->
+    <script src="./object2.js"></script>
+    <!-- <script src="./object3.js"></script> -->
+    <!-- <script src="./object4.js"></script> -->
+    <!-- <script src="./object5.js"></script> -->
+    <!-- <script src="./questions.js"></script> -->
+  </body>
 </html>
